<resources>
    <string name="app_name">OctoQuotes</string>
    <string name="suggestion">Suggestion</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="onSuccessTextviewFeedback">Thank you!\nWe appreciate your feedback!\nHave a wonderful day!</string>
    <string name="OnFailureTextviewFeedback">Awww, something went wrong! :( \nMaybe try again in a few moments.</string>
    <string name="feedbackTitleTextView">Please share your feedback.</string>
    <string name="subjectEditTextText">Subject</string>
    <string name="feedbackEditTextText">Let us know how we can improve…</string>
    <string name="submitButtonText">submit</string>
    <string name="suggestionTitleTextViewText">Please share your suggestion.</string>
    <string name="categoryEditTextHint">Category</string>
    <string name="quoteEditTextHint">Quote text here…</string>
    <string name="authorEditTextHint">Author</string>
    <string name="onSuccessTextViewSuggestion">Thank you!\nWe will review your suggestion and add it on the next update!\nLove you!</string>
    <string name="onFailureTextViewSuggestion">Awww, something went wrong! :(\nMaybe there\'s something wrong with your Internet connection.\nJust try again in a few moments.</string>
    <string name="menuText">Menu</string>
    <string name="fakeButtonTitleText">Octo Quotes</string>
    <string name="default_quote">A fine quotation is a diamond in the hand of a man of wit and a pebble in the hand of a fool.</string>
    <string name="default_author">~ Joseph Roux</string>
    <string name="up_button_content_description">up button</string>
    <string name="add_to_favorites_button_content_description">add to favorites button</string>
    <string name="category_icon_placeholder_contente_description">category icon placeholder</string>
    <string name="random_next_quote_button_content_description">random next quote button</string>
    <string name="copy_quote_button_content_description">copy quote</string>
    <string name="theme_settings_text">theme</string>
    <string name="theme_dark_radio_button_text">Dark</string>
    <string name="theme_light_radio_button_text">Light</string>
    <string name="without_author_radio_button_text">without author</string>
    <string name="with_author_radio_button_text">with author</string>
    <string name="favorites_activity_title_textview">Favorites</string>
    <string name="favorite_quote_icon_content_description">category icon corresponding to quote</string>
    <string name="trash_icon_content_description">trash icon to remove quote from favorites</string>
    <string name="menu_button_content_description">three points menu button to open menu</string>
    <string name="bookmark_icon_content_description">bookmark icon that leads to favorite quotes activity</string>
    <string name="app_logo_icon_content_description">app logo icon</string>
    <string name="divider_line_content_description">a line to divide header from body</string>
    <string name="category_icon_content_description">icon of the category next to it</string>
    <string name="category_name_text_in_main">CategoryName</string>
    <string name="category_list_size_text_in_main">000</string>
    <string name="variable_category_text_view_content_description">the icon corresponding to the category</string>
    <string name="shuffle_settings_text">shuffle quotes on app start</string>
    <string name="no_shuffle_radio_button_text">deactivated</string>
    <string name="yes_shuffle_radio_button_text">activated</string>
    <string name="category_icon_image_view_in_custom_layout">category icon corresponding to category</string>
    <string name="ring_around_quote_image_view_in_custom_layout_2">ring around quote index</string>
    <string name="search_activity_title">search for quotes…</string>
    <string name="search_edit_text_hint">category, author, words, …</string>
    <string name="search_image_button_icon">search icon</string>
</resources>
