<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RandomQuoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayoutRandom"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/mainPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/upButtonRandom"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:background="@color/mainPurple"
            android:contentDescription="@string/up_button_content_description"
            android:onClick="onUpButtonClickRandom"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/x53_arrow_snow" />

        <ImageButton
            android:id="@+id/addRandomToFavoritesButton"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/mainPurple"
            android:contentDescription="@string/add_to_favorites_button_content_description"
            android:onClick="onAddRandomToFavoritesButtonClick"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/x50_bookmark_snow" />

        <ImageView
            android:id="@+id/categoryIconRandomImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/category_icon_placeholder_contente_description"
            android:paddingBottom="2dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bodyLayoutRandom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayoutRandom"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/randomQuoteTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="serif"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/default_quote"
            android:textAlignment="center"
            android:textColor="@color/foregroundColor"
            app:layout_constraintBottom_toTopOf="@+id/randomAuthorTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/randomAuthorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/default_author"
            android:textAlignment="textEnd"
            android:textColor="@color/foregroundColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/copyRandomQuoteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/copyRandomQuoteButton"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/backgroundColor"
            android:contentDescription="@string/copy_quote_button_content_description"
            android:onClick="onCopyRandomButtonClick"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/x51_copy_snow" />

        <ImageButton
            android:id="@+id/refreshQuoteButton"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/backgroundColor"
            android:contentDescription="@string/random_next_quote_button_content_description"
            android:onClick="onRefreshQuoteButtonClick"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/x56_arrow_right_snow" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>